# Parser

./: README.md
Parser.hsproj/: .uuid  1__#$!@%!#__File.hs  AppConfig.yaml  DBInterface.hs  DBUtils.hs  Database.hs  Dd.hs  File.hs  HandleIO.hs  Main.hs  Parser.cabal  Parser.hs  Server.hs  Types.hs  _Database.hsplay  _File.hsplay  _HandleIO.hsplay  _Main.hsplay  _Parser.hsplay  _Server.hsplay  _Types.hsplay  db.txt
Parser.hsproj/DB/: Articles.hs  Interface.hs  Utils.hs  _Interface.hsplay  _Utils.hsplay
client/: bower.json
client/src/: Types.hs
